tests/Tree/negative/test003.jvt
-- case on non-data

function main() : * {
  case[list](3) {
    nil: 0
    cons: 1
  }
}
